# ddns

./: CHANGELOG.md  Cargo.toml  INSTALL.md  README.md  deny.toml  no-ip-setting.md
binaries/: noip-duc_3.1.0_amd64.deb  noip-duc_3.1.0_armhf.deb
src/: dns_method.rs  main.rs  noip2.rs  public_ip.rs  update.rs
test-data/: everything-2.1.7.conf
